# Memcached_PointCloud

./: README.md
memc_client/: CMakeLists.txt  package.xml
memc_client/include/: mc_reader.h
memc_client/src/: main.cpp  mc_reader.cpp  test.cpp
memc_cloud/: CMakeLists.txt  package.xml
memc_cloud/include/: mc.h  mc_pointcloud2.h
memc_cloud/src/: main.cpp  mc.cpp  mc_pointcloud2.cpp  pcl_cache.cpp
